# my-rag-app

./: .env.example  .gitignore  README.md  embedding.py  main.py  pyproject.toml  zhipuai_embedding.py
