[project]
name = "my-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.11",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=0.3.18",
    "langchain-text-splitters>=0.3.8",
    "langchain-zhipuai-dev>=0.3.0",
    "pymupdf>=1.26.0",
    "streamlit>=1.45.1",
    "zhipu>=1.0.1",
    "zhipuai>=2.1.5.20250526",
]
